fix(fc proposal): set default deposit value, fix layout issues on Safari

--- a/astro_2.0/features/CreateProposal/components/CustomFunctionCallContent/CustomFunctionCallContent.module.scss
+++ b/astro_2.0/features/CreateProposal/components/CustomFunctionCallContent/CustomFunctionCallContent.module.scss
@@ -21,6 +21,7 @@
 
 .gas {
   grid-area: gas;
+  max-width: 86px;
 }
 
 .editor {
