--- a/astro_2.0/features/CreateProposal/components/GroupedSelect/GroupedSelect.module.scss
+++ b/astro_2.0/features/CreateProposal/components/GroupedSelect/GroupedSelect.module.scss
@@ -61,7 +61,7 @@
   background: #fff;
   box-shadow: 0 8.89583px 30px rgba(0, 0, 0, 0.14);
   list-style: none;
-  max-height: 450px;
+  max-height: 420px;
   overflow-y: auto;
   padding: 16px 0;
   position: absolute;
